# Serv_ktin

./: app.py  pyproject.toml  utils.py
static/src/css/: ktin.css
static/src/script/: script.js
templates/: admin.html  index.html  login.html
