[tool.poetry]
name = "ktin-serv"
version = "0.1.0"
description = ""
authors = ["Ktin"]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.1,<4.0.0"
flask-mysqldb = ">=2.0.0,<3.0.0"
flask-bcrypt = ">=1.0.1,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
